crates/vexor-compiler/tests/golden/error/input/fn_missing_name.vx
// missing function name
fn (x) = x * 2

val result = double(10)
export Circle(result)
